/*
 * Copyright 2018-2020 Radicalbit S.r.l.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package io.radicalbit.nsdb.rpc;

import "request.proto";
import "response.proto";
import "requestSQL.proto";
import "requestCommand.proto";
import "responseSQL.proto";
import "responseCommand.proto";
import "security.proto";

service NSDBServiceSQL {
    option (isAuthorized) = true;
    rpc InsertBit (io.radicalbit.nsdb.rpc.RPCInsert) returns (io.radicalbit.nsdb.rpc.RPCInsertResult) {}
    rpc executeSQLStatement(io.radicalbit.nsdb.rpc.SQLRequestStatement) returns (io.radicalbit.nsdb.rpc.SQLStatementResponse) {}
}

service NSDBServiceCommand {
    option (isAuthorized) = true;
    rpc showNamespaces (io.radicalbit.nsdb.rpc.ShowNamespaces) returns (io.radicalbit.nsdb.rpc.Namespaces) {}
    rpc showMetrics (io.radicalbit.nsdb.rpc.ShowMetrics) returns (io.radicalbit.nsdb.rpc.MetricsGot) {}
    rpc describeMetric (io.radicalbit.nsdb.rpc.DescribeMetric) returns (io.radicalbit.nsdb.rpc.DescribeMetricResponse) {}
}